src/test/deca/codegen/invalid/calling_method_on_not_init.deca
// Calling a method on an object not initialized

class A {
    void method(){
        print("I'm doing stuff");
    }
}

{
    A a;
    a.method();
}

// TODOTEST: devrait throw une erreur plutot que print ?